--- a/Scribe/Base.lproj/Main.storyboard
+++ b/Scribe/Base.lproj/Main.storyboard
@@ -1,14 +1,19 @@
-<?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="11134" systemVersion="15F34" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES" initialViewController="BYZ-38-t0r">
+<?xml version="1.0" encoding="UTF-8"?>
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="11762" systemVersion="16D32" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES" initialViewController="BYZ-38-t0r">
+    <device id="retina4_7" orientation="portrait">
+        <adaptation id="fullscreen"/>
+    </device>
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="11106"/>
+        <deployment identifier="iOS"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="11757"/>
+        <capability name="Constraints to layout margins" minToolsVersion="6.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
         <!--View Controller-->
         <scene sceneID="tne-QT-ifu">
             <objects>
-                <viewController id="BYZ-38-t0r" customClass="ViewController" customModuleProvider="target" sceneMemberID="viewController">
+                <viewController id="BYZ-38-t0r" customClass="ViewController" customModule="Scribe" customModuleProvider="target" sceneMemberID="viewController">
                     <layoutGuides>
                         <viewControllerLayoutGuide type="top" id="y3c-jy-aDJ"/>
                         <viewControllerLayoutGuide type="bottom" id="wfy-db-euE"/>
@@ -16,11 +21,87 @@
                     <view key="view" contentMode="scaleToFill" id="8bC-Xf-vdC">
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="1cM-m7-O4T">
+                                <rect key="frame" x="0.0" y="0.0" width="375" height="55"/>
+                                <subviews>
+                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="SCRIBE" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="34j-tx-Blc">
+                                        <rect key="frame" x="153" y="14" width="69" height="28"/>
+                                        <fontDescription key="fontDescription" name="AvenirNext-DemiBold" family="Avenir Next" pointSize="20"/>
+                                        <color key="textColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                        <nil key="highlightedColor"/>
+                                    </label>
+                                </subviews>
+                                <color key="backgroundColor" red="1" green="0.014501270320000001" blue="0.039605344520000002" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                <constraints>
+                                    <constraint firstItem="34j-tx-Blc" firstAttribute="centerX" secondItem="1cM-m7-O4T" secondAttribute="centerX" id="Rtt-sb-X0T"/>
+                                    <constraint firstAttribute="height" constant="55" id="gkC-Lh-rkg"/>
+                                    <constraint firstItem="34j-tx-Blc" firstAttribute="centerY" secondItem="1cM-m7-O4T" secondAttribute="centerY" id="q6Z-f0-Fvq"/>
+                                </constraints>
+                            </view>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="4Zh-32-8sW" customClass="CircleButton" customModule="Scribe" customModuleProvider="target">
+                                <rect key="frame" x="158" y="563" width="60" height="60"/>
+                                <color key="backgroundColor" red="1" green="0.014501270320000001" blue="0.039605344520000002" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="60" id="8GF-iV-pDx"/>
+                                    <constraint firstAttribute="width" constant="60" id="gDK-4W-k4x"/>
+                                </constraints>
+                                <userDefinedRuntimeAttributes>
+                                    <userDefinedRuntimeAttribute type="number" keyPath="cornerRaidus">
+                                        <real key="value" value="30"/>
+                                    </userDefinedRuntimeAttribute>
+                                </userDefinedRuntimeAttributes>
+                                <connections>
+                                    <action selector="playButtonPressed:" destination="BYZ-38-t0r" eventType="touchUpInside" id="j69-5Q-KVW"/>
+                                </connections>
+                            </button>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="PLAY &amp; TRANSCRIBE" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="IyQ-uH-QIW">
+                                <rect key="frame" x="90" y="631" width="195" height="28"/>
+                                <fontDescription key="fontDescription" name="AvenirNext-DemiBold" family="Avenir Next" pointSize="20"/>
+                                <color key="textColor" white="0.33333333333333331" alpha="1" colorSpace="calibratedWhite"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <textView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" text="Tap the button below to transcribe the audio embedded in this app." textAlignment="center" translatesAutoresizingMaskIntoConstraints="NO" id="Ba3-rJ-oUZ">
+                                <rect key="frame" x="16" y="75" width="343" height="468"/>
+                                <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                <fontDescription key="fontDescription" name="AvenirNext-UltraLight" family="Avenir Next" pointSize="18"/>
+                                <textInputTraits key="textInputTraits" autocapitalizationType="sentences"/>
+                            </textView>
+                            <activityIndicatorView opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="750" verticalHuggingPriority="750" style="whiteLarge" translatesAutoresizingMaskIntoConstraints="NO" id="qKP-Oy-Reg">
+                                <rect key="frame" x="157.5" y="563" width="60" height="60"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="60" id="21b-JP-jGR"/>
+                                    <constraint firstAttribute="width" constant="60" id="SuF-en-ahb"/>
+                                </constraints>
+                            </activityIndicatorView>
+                        </subviews>
                         <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                        <constraints>
+                            <constraint firstAttribute="trailing" secondItem="1cM-m7-O4T" secondAttribute="trailing" id="3Qr-z3-W84"/>
+                            <constraint firstAttribute="trailingMargin" secondItem="Ba3-rJ-oUZ" secondAttribute="trailing" id="5Mv-LP-ToG"/>
+                            <constraint firstItem="wfy-db-euE" firstAttribute="top" secondItem="IyQ-uH-QIW" secondAttribute="bottom" constant="8" id="86W-3C-V5O"/>
+                            <constraint firstItem="Ba3-rJ-oUZ" firstAttribute="leading" secondItem="8bC-Xf-vdC" secondAttribute="leadingMargin" id="8GG-wu-XrI"/>
+                            <constraint firstItem="IyQ-uH-QIW" firstAttribute="top" secondItem="4Zh-32-8sW" secondAttribute="bottom" constant="8" id="9Sh-oK-5lC"/>
+                            <constraint firstItem="4Zh-32-8sW" firstAttribute="top" secondItem="Ba3-rJ-oUZ" secondAttribute="bottom" constant="20" id="Cle-Zr-Tmh"/>
+                            <constraint firstItem="34j-tx-Blc" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="DeW-LS-c6r"/>
+                            <constraint firstItem="qKP-Oy-Reg" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="PoD-8h-xtN"/>
+                            <constraint firstItem="1cM-m7-O4T" firstAttribute="leading" secondItem="8bC-Xf-vdC" secondAttribute="leading" id="Tbp-9K-ZpU"/>
+                            <constraint firstItem="1cM-m7-O4T" firstAttribute="top" secondItem="8bC-Xf-vdC" secondAttribute="top" id="ZAB-n9-nV6"/>
+                            <constraint firstItem="Ba3-rJ-oUZ" firstAttribute="top" secondItem="1cM-m7-O4T" secondAttribute="bottom" constant="20" id="b3r-sR-Gtz"/>
+                            <constraint firstItem="IyQ-uH-QIW" firstAttribute="top" secondItem="qKP-Oy-Reg" secondAttribute="bottom" constant="8" id="hL8-V4-zpS"/>
+                            <constraint firstItem="IyQ-uH-QIW" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="r2i-ZI-Jcf"/>
+                            <constraint firstItem="34j-tx-Blc" firstAttribute="centerY" secondItem="8bC-Xf-vdC" secondAttribute="centerY" constant="-305.5" id="rIj-pB-lkv"/>
+                            <constraint firstItem="4Zh-32-8sW" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="zdU-Iu-ARv"/>
+                        </constraints>
                     </view>
+                    <connections>
+                        <outlet property="activitySpinner" destination="qKP-Oy-Reg" id="Qzd-vx-BlV"/>
+                        <outlet property="transcritionTextField" destination="Ba3-rJ-oUZ" id="GLC-Hg-Vct"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
+            <point key="canvasLocation" x="136.80000000000001" y="138.98050974512745"/>
         </scene>
     </scenes>
 </document>
